feat(backup): add database backup task and management interface